--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie-edge">
     <link rel="stylesheet" href="style.css">
-    <title>Super Voyage</title>
+    <title>Super Voyage modifié</title>
 </head>
 
 <body>
